[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Audiowide-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.129412, 0.101961, 0.101961, 0.662745 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_size = 10
shadow_offset = Vector2( 5, 5 )

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 9
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=7]
size = 30
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.305882 )

[node name="ColorRect" type="Panel" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.0
margin_top = 37.0
margin_right = 89.0
margin_bottom = 162.0
custom_styles/panel = SubResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -55.0
margin_top = -121.0
margin_right = 176.0
margin_bottom = 51.0
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/separation = 8

[node name="resume" type="Button" parent="ColorRect/VBoxContainer"]
margin_right = 231.0
margin_bottom = 52.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.0352941, 0.627451, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "Resume"
flat = true

[node name="restart" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 60.0
margin_right = 231.0
margin_bottom = 112.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.545098, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Restart"
flat = true

[node name="exit" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 120.0
margin_right = 231.0
margin_bottom = 172.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.882353, 0.211765, 0.211765, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "Exit"
flat = true

[node name="paused" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = -80.0
margin_right = 69.0
margin_bottom = 13.0
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true
bbcode_text = "
[center][wave]paused[/wave][/center]"
text = "
paused"

[connection signal="pressed" from="ColorRect/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/exit" to="." method="_on_exit_pressed"]
